Website - Refactor DocCodeBlock to fix z-index issues (#2704)

--- a/website/app/styles/pages/application/tabs.scss
+++ b/website/app/styles/pages/application/tabs.scss
@@ -36,20 +36,10 @@
   @include breakpoint.x-large() {
     padding: 24px var(--doc-page-stage-gutter-x-large) 0;
   }
-}
 
-// Make tabs position sticky/fixed if:
-// * the viewport height is greater than 480px AND
-// * dialog is NOT open
-// * code editor is NOT in full screen mode
-.doc-page-wrapper
-  :not(:has(dialog[open]))
-  :not(:has(.hds-code-editor--is-full-screen)) {
   @media (height >= 480px) {
-    .doc-page-tabs {
-      position: sticky;
-      top: var(--doc-page-header-height);
-    }
+    position: sticky;
+    top: var(--doc-page-header-height);
   }
 }
 
